// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<__SectionList/> renders correctly when there are no sections 1`] = `
<div>
  <h3
    className="page-header"
  >
    <Tasks />
     Questionnaire
  </h3>
  <Jumbotron
    align="center"
    heading="this questionnaire is empty"
    para="please contact support"
  />
</div>
`;

exports[`<__SectionList/> renders the list of sections correctly 1`] = `
<div>
  <h3
    className="page-header"
  >
    <Tasks />
     Questionnaire
  </h3>
  <Connect(__Section)
    auditStoreId={2}
    proof_tags={Array []}
    sectionId={1}
  />
  <Connect(__Section)
    auditStoreId={2}
    proof_tags={Array []}
    sectionId={2}
  />
</div>
`;
